Fixed header on iOS devices!

--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,8 @@ body {
         -webkit-box-align: center;
                 align-items: center;
         -webkit-box-pack: end;
-                justify-content: flex-end; }
+                justify-content: flex-end;
+        height: 60px; }
         .header .container .profile-menu .menu-underlay .name {
           color: #F6F6F6;
           margin-right: 5px;
